adding-pb-to-body-about

--- a/public/about.html
+++ b/public/about.html
@@ -105,7 +105,7 @@
         }
   </style>
 
-  <body class="bg-[#131417]">
+  <body class="bg-[#131417] pb-32">
 
 
     <!-- theme Button -->
@@ -250,11 +250,11 @@ stroke-linecap="round"
         </p>
         </div>
 
-     <div class="flex flex-wrap justify-center gap-x-5 pt-0 p-5 md:p-14 text-center text-white max-w-7xl mx-auto">
+     <div class="flex flex-wrap justify-center gap-x-5 pt-0 md:p-14 text-center text-white max-w-7xl mx-auto">
  
-         <div class="flex flex-row gap-5 gap-y-8 mb-8 md:mb-0">
+         <div class="flex flex-row gap-5 gap-y-8 mb-8 md:mb-0" data-aos="flip-left">
              
-             <div data-aos="flip-left"
+             <div
                  class="skill-card group relative overflow-hidden
                          bg-[#131414] ring-1 ring-[#3a3a3d]
                          sm:w-[200px] sm:h-[200px] w-[170px] h-[170px]
@@ -271,7 +271,7 @@ stroke-linecap="round"
 
                  <div class="absolute inset-0 bg-gradient-to-br from-orange-500/10 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
              </div>
-             <div data-aos="flip-left"
+             <div
                  class="skill-card group relative overflow-hidden
                          bg-[#131414] ring-1 ring-[#3a3a3d]
                          sm:w-[200px] sm:h-[200px] w-[170px] h-[170px]
@@ -292,9 +292,9 @@ stroke-linecap="round"
 
          </div>
 
-         <div class="flex flex-row gap-5 gap-y-8">
+         <div class="flex flex-row gap-5 gap-y-8" data-aos="flip-right">
              
-             <div data-aos="flip-right" class="skill-card group relative overflow-hidden
+             <div class="skill-card group relative overflow-hidden
                          bg-[#131414] ring-1 ring-[#3a3a3d]
                          sm:w-[200px] sm:h-[200px] w-[170px] h-[170px]
                          p-4 sm:p-6 rounded-3xl flex flex-col justify-center items-center cursor-pointer
@@ -313,7 +313,7 @@ stroke-linecap="round"
              </div>
 
 
-             <div data-aos="flip-right"
+             <div
                  class="skill-card group relative overflow-hidden
                          bg-[#131414] ring-1 ring-[#3a3a3d]
                          sm:w-[200px] sm:h-[200px] w-[170px] h-[170px]
