--- a/public/about.html
+++ b/public/about.html
@@ -105,7 +105,7 @@
         }
   </style>
 
-  <body class="bg-[#131417] pb-32">
+  <body class="bg-[#131417] pb-32 md:pb-0">
 
 
     <!-- theme Button -->
