adding lenis library to pages

--- a/public/projects.html
+++ b/public/projects.html
@@ -555,6 +555,7 @@ stroke-linecap="round"
     <script>
         AOS.init()
     </script>
+    <script src="../public/Libraries/lenis.min.js"></script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
