--- a/public/home.html
+++ b/public/home.html
@@ -11,7 +11,7 @@
 
   <title>ALONE PORTFOLIO</title>
 </head>
-<body style="overflow: auto;" class="bg-[#131417] text-white relative h-screen">
+<body style="overflow: auto;" class="bg-[#131417] text-white relative">
     <!-- theme Button -->
     <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-9 right-3 top-3 z-50 /// flex justify-center items-center font-bold text-white">
 
@@ -147,5 +147,6 @@ stroke-linecap="round"
     <script>
         AOS.init()
     </script>
+    <script src="../public/Libraries/lenis.min.js"></script>
 </body>
 </html>
