--- a/public/home.html
+++ b/public/home.html
@@ -11,7 +11,7 @@
 
   <title>ALONE PORTFOLIO</title>
 </head>
-<body style="overflow: auto;" class="bg-[#131417] text-white relative">
+<body style="overflow: auto;" class="bg-[#131417] text-white relative h-screen">
     <!-- theme Button -->
     <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-9 right-3 top-3 z-50 /// flex justify-center items-center font-bold text-white">
 
