--- a/public/projects.html
+++ b/public/projects.html
@@ -219,7 +219,7 @@ stroke-linecap="round"
         data-aos-duration="1300" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative duration-300 group text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
                 <a class="block overflow-hidden w-72 h-48 rounded-2xl" href="https://alone0007.github.io/Jojo-Portfolio/public/index.html">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[#3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110" src="../image/jojo.png" alt="">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[#3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110" src="../image/jojo.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
                 <div class="flex justify-start items-center group-hover:ml-7 duration-300">
@@ -268,7 +268,7 @@ stroke-linecap="round"
         data-aos-duration="1900" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
                 <a class="block overflow-hidden w-72 h-48 rounded-2xl" href="https://alone0007.github.io/foods-delivery/">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/foods-delivery/3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110" src="../image/food-delivery.png" alt="">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/foods-delivery/3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110" src="../image/food-delivery.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
                 <div class="flex justify-start items-center group-hover:ml-7 duration-300">
@@ -317,7 +317,7 @@ stroke-linecap="round"
         data-aos-duration="2500" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
                 <a class="block overflow-hidden w-72 h-48 rounded-2xl" href="https://alone0007.github.io/Style-Shop/public/index.html">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/Style-Shop/public/index.html3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110" src="../image/style.png" alt="">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/Style-Shop/public/index.html3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110" src="../image/style.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
                 <div class="flex justify-start items-center group-hover:ml-7 duration-300">
