--- a/public/home.html
+++ b/public/home.html
@@ -7,25 +7,30 @@
   <link rel="stylesheet" href="../aos/aos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../src/output.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="Night & Day/theme.css">
 
   <title>ALONE PORTFOLIO</title>
 </head>
 <body style="overflow: auto;" class="bg-[#131417] text-white relative h-screen">
     <!-- theme Button -->
-    <button class="fixed themeButton cursor-pointer bg-slate-900 rounded-full size-9 right-3 top-3 z-50 /// flex justify-center items-center font-bold text-white">
-
-        <!-- light -->
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 lightSvg">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
-          </svg>
-        <!-- dark -->
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-5 hidden darkSvg">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
-          </svg>
-          
-
-     </button>
+     <div class="w-[90px] themeButton z-50 cursor-pointer h-10 bg-orange-700 rounded-3xl py-1 px-1 flex justify-between absolute right-2 top-2 duration-500">
+    <div class="flex items-center">
+        <p class="absolute left-2 text-white"> 
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 fill-current">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z" />
+            </svg> 
+        </p>
+    </div>
+    <button id="btn" class="bg-white cursor-pointer rounded-full size-8 z-40 absolute top-1 left-1 transition-transform duration-500 ease-in-out"></button>
+    <div class="flex items-center">
+        <p class="text-white absolute right-2">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="#fff" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M21.752 15.002A9.72 9.72 0 0 1 18 15.75c-5.385 0-9.75-4.365-9.75-9.75 0-1.33.266-2.597.748-3.752A9.753 9.753 0 0 0 3 11.25C3 16.635 7.365 21 12.75 21a9.753 9.753 0 0 0 9.002-5.998Z" />
+            </svg>
+        </p>
+    </div>
+    </div>
 
     <div id="anim"
   class="bg-[#222222] absolute h-full w-full bottom-0 z-50 rounded-tr-[30px] rounded-tl-[30px] flex justify-center items-center overflow-hidden"><p id="loading" class="text-primary text-5xl font-poppins flex justify-center items-center gap-x-4"> LOADING<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"class="size-14 animate-spin"><path
@@ -140,7 +145,6 @@ stroke-linecap="round"
 
 
 
-    
     <script src="../aos/aos.js"></script>
     <script type="module" src="script.js"></script>
 
