--- a/public/about.html
+++ b/public/about.html
@@ -109,7 +109,7 @@
 
 
     <!-- theme Button -->
-     <div class="w-[90px] themeButton z-50 cursor-pointer h-10 bg-orange-700 rounded-3xl py-1 px-1 flex justify-between absolute right-2 top-2 duration-500">
+     <div class="w-[90px] themeButton z-50 cursor-pointer h-10 bg-orange-700 rounded-3xl py-1 px-1 flex justify-between fixed right-2 top-2 duration-500">
     <div class="flex items-center">
         <p class="absolute left-2 text-white"> 
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 fill-current">
