adding custom scroll bar

--- a/public/about.html
+++ b/public/about.html
@@ -12,6 +12,7 @@
     
     <link rel="stylesheet" href="../aos/aos.css">
     <link rel="stylesheet" href="Night & Day/theme.css">
+    <link rel="stylesheet" href="customScrollBar.css">
   </head>
 
   <style>
