--- a/public/projects.html
+++ b/public/projects.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="../src/output.css">
   <link rel="stylesheet" href="../aos/aos.css">
   <link rel="stylesheet" href="Night & Day/theme.css">
+  <link rel="stylesheet" href="customScrollBar.css">
     <title>Projects</title>
 </head>
 
