fixing menu in about page

--- a/public/about.html
+++ b/public/about.html
@@ -335,7 +335,7 @@ stroke-linecap="round"
         <a id="homeIcon" class="secondAboutIcon flex justify-center items-center bg-primary hover:bg-primary rounded-2xl duration-100 size-[50px] text-[20px] z-50" href="about.html">
             <i class="fa fa-user"></i>
         </a>
-        <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primar" href="projects.html">
+        <a id="homeIcon" class="flex justify-center items-center bg-[#2E2C29] hover:bg-primary rounded-2xl  duration-100 size-[50px] text-[20px] z-50 shadow-xs shadow-primary" href="projects.html">
             <i class="fa fa-briefcase"></i>
         </a>
     </ul>
