--- a/public/home.html
+++ b/public/home.html
@@ -10,10 +10,11 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="Night & Day/theme.css">
   <link rel="stylesheet" href="customCursor.css">
+  
 
   <title>ALONE PORTFOLIO</title>
 </head>
-<body style="overflow: auto;" class="bg-[#131417] text-white relative h-screen selection:text-black selection:bg-primary">
+<body  class="bg-[#131417] text-white relative h-screen selection:text-black selection:bg-primary">
     <!-- theme Button -->
      <div class="w-[90px] themeButton z-50 h-10 bg-orange-700 rounded-3xl py-1 px-1 flex justify-between fixed right-2 top-2 duration-500">
     <div class="flex items-center">
