change github name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="src/output.css">
-<meta http-equiv="refresh" content="0; url=https://alone0007.github.io/mobin_rezaee_portfolio/public/home.html">
+<meta http-equiv="refresh" content="0; url=https://mohamad-mobin.github.io/mobin_rezaee_portfolio/public/home.html">
 </head>
 <body>
     
