--- a/public/projects.html
+++ b/public/projects.html
@@ -229,7 +229,7 @@ stroke-linecap="round"
         data-aos-offset="0"
         data-aos-duration="1300" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative duration-300 group text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
-                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://alone0007.github.io/Jojo-Portfolio/public/index.html">
+                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://mohamad-mobin.github.io/Jojo-Portfolio/public/index.html">
                     <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[#3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/jojo.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
@@ -238,8 +238,8 @@ stroke-linecap="round"
                         <img draggable="false" class="size-10 inline-block bg-white rounded-[5px] mr-3 mt-2" src="../image/banner.png" alt="">
                     </div>
                     <div>
-                        <a href="https://alone0007.github.io/Jojo-Portfolio/public/index.html" class="block pt-2 font-bold duration-300 w-full">JoJo Portfolio</a>
-                        <a href="https://alone0007.github.io/Jojo-Portfolio/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">professional portfolio</a>
+                        <a href="https://mohamad-mobin.github.io/Jojo-Portfolio/public/index.html" class="block pt-2 font-bold duration-300 w-full">JoJo Portfolio</a>
+                        <a href="https://mohamad-mobin.github.io/Jojo-Portfolio/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">professional portfolio</a>
                     </div>
                 </div>
                 <ul class="flex relative top-3 text-yellow-300">
@@ -278,8 +278,8 @@ stroke-linecap="round"
         data-aos-offset="0"
         data-aos-duration="1900" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
-                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://alone0007.github.io/foods-delivery/">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/foods-delivery/3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/food-delivery.png" alt="">
+                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://mohamad-mobin.github.io/foods-delivery/">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://mohamad-mobin.github.io/foods-delivery/3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/food-delivery.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
                 <div class="flex justify-start items-center group-hover:ml-7 duration-300">
@@ -287,8 +287,8 @@ stroke-linecap="round"
                         <img draggable="false" class="size-10 inline-block bg-white rounded-[5px] mr-3 mt-2" src="../image/lgo.png" alt="">
                     </div>
                     <div>
-                        <a href="https://alone0007.github.io/foods-delivery/" class="block pt-2 font-bold duration-300 w-full">Food Delivery</a>
-                        <a href="https://alone0007.github.io/foods-delivery/" class="block text-[#8d8d8d] text-xs duration-300 w-full">online mac donald</a>
+                        <a href="https://mohamad-mobin.github.io/foods-delivery/" class="block pt-2 font-bold duration-300 w-full">Food Delivery</a>
+                        <a href="https://mohamad-mobin.github.io/foods-delivery/" class="block text-[#8d8d8d] text-xs duration-300 w-full">online mac donald</a>
                     </div>
                 </div>
                 <ul class="flex relative top-3 text-yellow-300">
@@ -327,8 +327,8 @@ stroke-linecap="round"
         data-aos-offset="0"
         data-aos-duration="2500" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
-                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://alone0007.github.io/Style-Shop/public/index.html">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/Style-Shop/public/index.html3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/style.png" alt="">
+                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://mohamad-mobin.github.io/Style-Shop/public/index.html">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://mohamad-mobin.github.io/Style-Shop/public/index.html3a3a3d] md:grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/style.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
                 <div class="flex justify-start items-center group-hover:ml-7 duration-300">
@@ -336,8 +336,8 @@ stroke-linecap="round"
                         <img draggable="false" class="size-10 inline-block bg-white rounded-[5px] mr-3 mt-2" src="../image/style-logo.png" alt="">
                     </div>
                     <div>
-                        <a href="https://alone0007.github.io/Style-Shop/public/index.html" class="block pt-2 font-bold duration-300 w-full">Style Shop</a>
-                        <a href="https://alone0007.github.io/Style-Shop/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">online clothes shop</a>
+                        <a href="https://mohamad-mobin.github.io/Style-Shop/public/index.html" class="block pt-2 font-bold duration-300 w-full">Style Shop</a>
+                        <a href="https://mohamad-mobin.github.io/Style-Shop/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">online clothes shop</a>
                     </div>
                 </div>
                 <ul class="flex relative top-3 text-yellow-300">
@@ -393,8 +393,8 @@ stroke-linecap="round"
     data-aos-offset="0"
     data-aos-duration="1300" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
-                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://alone0007.github.io/limoo-site/public/index.html">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/limoo-site/public/index.html3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/limoo.png" alt="">
+                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://mohamad-mobin.github.io/limoo-site/public/index.html">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://mohamad-mobin.github.io/limoo-site/public/index.html3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/limoo.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1
             ">
@@ -403,8 +403,8 @@ stroke-linecap="round"
                         <img draggable="false" class="size-10 inline-block bg-white rounded-[5px] mr-3 mt-2" src="../image/limoo-logo.png" alt="">
                     </div>
                     <div>
-                        <a href="https://alone0007.github.io/limoo-site/public/index.html" class="block pt-2 font-bold duration-300 w-full">Limoo Site</a>
-                        <a href="https://alone0007.github.io/limoo-site/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">iranian limoo site</a>
+                        <a href="https://mohamad-mobin.github.io/limoo-site/public/index.html" class="block pt-2 font-bold duration-300 w-full">Limoo Site</a>
+                        <a href="https://mohamad-mobin.github.io/limoo-site/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">iranian limoo site</a>
                     </div>
                 </div>
                 <ul class="flex relative top-3 text-yellow-300">
@@ -438,8 +438,8 @@ stroke-linecap="round"
     data-aos-offset="0"
     data-aos-duration="1900" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
-                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://alone0007.github.io/Shahrdari-Page/public/index.html">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/Shahrdari-Page/public/index.html3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/shahrdari.png" alt="">
+                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://mohamad-mobin.github.io/Shahrdari-Page/public/index.html">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://mohamad-mobin.github.io/Shahrdari-Page/public/index.html3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/shahrdari.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
                 <div class="flex justify-start items-center group-hover:ml-7 duration-300">
@@ -447,8 +447,8 @@ stroke-linecap="round"
                         <img draggable="false" class="size-10 inline-block bg-white rounded-[5px] mr-3 mt-2" src="../image/shahrdari-logo.png" alt="">
                     </div>
                     <div>
-                        <a href="https://alone0007.github.io/Shahrdari-Page/public/index.html" class="block pt-2 font-bold duration-300 w-full">Shahrdari Page</a>
-                        <a href="https://alone0007.github.io/Shahrdari-Page/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">iranian shahrdari page</a>
+                        <a href="https://mohamad-mobin.github.io/Shahrdari-Page/public/index.html" class="block pt-2 font-bold duration-300 w-full">Shahrdari Page</a>
+                        <a href="https://mohamad-mobin.github.io/Shahrdari-Page/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">iranian shahrdari page</a>
                     </div>
                 </div>
                 <ul class="flex relative top-3 text-yellow-300">
@@ -482,8 +482,8 @@ stroke-linecap="round"
     data-aos-offset="0"
     data-aos-duration="2500" class="bg-[#1E1F26] select-none w-72 h-56 rounded-2xl relative group duration-300 text-white ring-1 ring-[#3a3a3d] shadow">
             <div class="absolute -left-5 -top-10 duration-300">
-                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://alone0007.github.io/Bookmark-Page/public/index.html">
-                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://alone0007.github.io/Bookmark-Page/public/index.html3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/bookmark.png" alt="">
+                <a class="block overflow-hidden w-72 h-48 rounded-2xl cursor-none" href="https://mohamad-mobin.github.io/Bookmark-Page/public/index.html">
+                    <img draggable="false" class=" size-full object-cover rounded-2xl ring-1 ring-[https://mohamad-mobin.github.io/Bookmark-Page/public/index.html3a3a3d] grayscale-100 group-hover:grayscale-0 duration-300 group-hover:scale-110 portofolio-item" src="../image/bookmark.png" alt="">
                 </a>
             <div class="flex items-center justify-between pt-1">
                 <div class="flex justify-start items-center group-hover:ml-7 duration-300">
@@ -491,8 +491,8 @@ stroke-linecap="round"
                         <img draggable="false" class="size-10 inline-block bg-white rounded-[5px] mr-3 mt-2" src="../image/bookmark-logo.png" alt="">
                     </div>
                     <div>
-                        <a href="https://alone0007.github.io/Bookmark-Page/public/index.html" class="block pt-2 font-bold duration-300 w-full">Bookmark Page</a>
-                        <a href="https://alone0007.github.io/Bookmark-Page/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">landing page</a>
+                        <a href="https://mohamad-mobin.github.io/Bookmark-Page/public/index.html" class="block pt-2 font-bold duration-300 w-full">Bookmark Page</a>
+                        <a href="https://mohamad-mobin.github.io/Bookmark-Page/public/index.html" class="block text-[#8d8d8d] text-xs duration-300 w-full">landing page</a>
                     </div>
                 </div>
                 <ul class="flex relative top-3 text-yellow-300">
